did more changes to html semantics and cleaned up css style sheet

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <header class="header">
-    <!--Added header element-->
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
-        <!--attempted to change from div but it would always alter the layout of the navigation bar-->
+    <header>
+    <!--Chnaged from div to header and got rid of unnessary class element identifier-->
+        <h1>Horiseon</h1>
+        <nav>
+        <!--Changed from div to nav element then altered css style sheet to reflect changes here-->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,14 +24,14 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
     <figure class="hero"></figure>
-    <!--Added figure element-->
+    <!--Changed from div to figure-->
     <main class="content">
-    <!--Added main element-->
+    <!--Changed from div to main element-->
         <section class="search-engine-optimization">
-        <!--Added section element-->
+        <!--Changed from div to section element-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -39,7 +39,7 @@
             </p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
-        <!--Added section element-->
+        <!--Changed from div to section element-->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -47,7 +47,7 @@
             </p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
-        <!--Added section element-->
+        <!--changed from div to section element-->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -57,9 +57,9 @@
     </main>
     
     <aside class="benefits">
-    <!--Added aside element-->
+    <!--Changed from div to aside element-->
         <section class="benefit-lead">
-        <!--Added section element-->
+        <!--Changed from div to section element-->
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
@@ -67,7 +67,7 @@
             </p>
         </section>
         <section class="benefit-brand">
-        <!--Added section element-->
+        <!--Changed from div to section element-->
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
@@ -75,7 +75,7 @@
             </p>
         </section>
         <section class="benefit-cost">
-        <!--Added section element-->
+        <!--Changed from div to section element-->
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
@@ -84,7 +84,7 @@
         </section>
     </aside>
     <footer class="footer">
-    <!--Added footer element-->
+    <!--Changed from div to footer element-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
