--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
@@ -32,6 +32,7 @@
     <!--Changed from div to main element-->
         <section class="section">
         <!--Changed from div to section element-->
+        <!--renamed class to section to simplify css style sheet-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -40,6 +41,7 @@
         </section>
         <section id="online-reputation-management" class="section">
         <!--Changed from div to section element-->
+        <!--renamed class to section to simplify css style sheet-->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -48,6 +50,7 @@
         </section>
         <section id="social-media-marketing" class="section">
         <!--changed from div to section element-->
+        <!--renamed class to section to simplify css style sheet-->
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -60,6 +63,7 @@
     <!--Changed from div to aside element-->
         <section class="sidebar">
         <!--Changed from div to section element-->
+        <!--renamed class to sidebar to simplify css style sheet-->
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
@@ -68,6 +72,7 @@
         </section>
         <section class="sidebar">
         <!--Changed from div to section element-->
+        <!--renamed class to sidebar to simplify css style sheet-->
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
@@ -76,6 +81,7 @@
         </section>
         <section class="sidebar">
         <!--Changed from div to section element-->
+        <!--renamed class to sidebar to simplify css style sheet-->
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
@@ -83,8 +89,8 @@
             </p>
         </section>
     </aside>
-    <footer
-    <!--Changed from div to footer element-->
+    <footer>
+    <!--Changed from div to footer element and got rid of class identifier-->
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
